# roundtable

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.bot  Dockerfile.worker  Makefile  README.md  alembic.ini  bot.py  docker-compose.yml  firstfile  main.py  pyproject.toml  sitecustomize.py  telegram_ai_roundtable_TZ (1).txt
adapters/: base.py  deepseek_adapter.py  deepseek_provider.py  local_echo.py  mock_provider.py  openai_adapter.py  openai_provider.py  registry.py
admin/: __init__.py  api.py  main.py  router.py
admin/templates/: base.html  dashboard.html  personalities.html  personality_form.html  provider_form.html  providers.html  session_detail.html  sessions.html  settings.html
api/: audit.py  dependencies.py  main.py  personalities.py  providers.py  sessions.py  settings.py
bot/: __init__.py  api_client.py  handlers.py  keyboards.py  main.py  runner.py  states.py
core/: __init__.py  audit.py  config.py  database.py  db.py  logging.py  main.py  models.py  schemas.py  security.py  seed.py  services.py
core/routes/: audit.py  personalities.py  providers.py  settings.py
docs/: acceptance_review.md  compliance_report.md  requirements.md
migrations/: env.py
migrations/versions/: 0001_initial.py  81772eb4e4d1_use_biginteger_for_telegram_id.py
orchestrator/: __init__.py  engine.py  exceptions.py  schemas.py  service.py  token_counter.py
src/roundtable/: __init__.py  core.py  exceptions.py  models.py  scheduler.py  session.py
tests/: conftest.py  test_adapters.py  test_api.py  test_api_sessions.py  test_bot.py  test_e2e.py  test_orchestrator.py  test_roundtable.py  test_seed.py
worker/: __init__.py  celery_app.py  tasks.py
