[tool.poetry]
name = "roundtable"
version = "0.1.0"
description = "Telegram bot orchestrating multi-model discussions"
authors = ["Roundtable AI"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
aiogram = "^3.10.0"
httpx = "^0.27.2"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
psycopg = {extras=["binary"], version = "^3.2.1"}
python-dotenv = "^1.0.1"
celery = "^5.4.0"
redis = "^5.0.7"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
cryptography = "^43.0.1"
Jinja2 = "^3.1.4"
fastapi-admin = "^1.0.4"
itsdangerous = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
httpx = {extras=["cli"], version="^0.27.2"}
ruff = "^0.6.4"
black = "^24.8.0"
SQLAlchemy-Utils = "^0.41.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "I"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
