[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roundtable-ai"
version = "0.1.0"
description = "Telegram bot orchestrating LLM roundtable discussions"
authors = [{name = "Roundtable Team"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "aiogram>=3.4",
    "SQLAlchemy>=2.0",
    "asyncpg",
    "aiosqlite",
    "alembic",
    "pydantic-settings",
    "pydantic[email]",
    "python-dotenv",
    "celery[redis]",
    "redis",
    "httpx",
    "cryptography",
    "jinja2",
    "passlib[bcrypt]",
    "python-multipart",
    "itsdangerous",
    "tenacity",
    "loguru",
    "pytest",
    "pytest-asyncio",
    "freezegun"
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "isort"
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B", "UP", "N", "D"]
ignore = ["D100", "D104", "D401"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = [
    "tests",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "core",
    "core.*",
    "admin",
    "admin.*",
    "bot",
    "bot.*",
    "adapters",
    "adapters.*",
    "orchestrator",
    "orchestrator.*",
    "worker",
    "worker.*",
]
